cabal-version:      3.0
name:               battleship
version:            0.1.0.0
license-file:       LICENSE
author:             George Gerasev
maintainer:         george30032002@gmail.com
build-type:         Simple
extra-doc-files:    CHANGELOG.md

common warnings
    ghc-options: -Wall

library
    import:           warnings
    exposed-modules:  BattleShip
    build-depends:    base ^>=4.17.2.1
                    , mtl
                    , containers
                    , list-shuffle
                    , unordered-containers
    hs-source-dirs:   lib
    default-language: Haskell2010

executable battleship
    import:           warnings
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , battleship
    hs-source-dirs:   exe
    default-language: Haskell2010

test-suite battleship-test
    import:           warnings
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    build-depends:
        base ^>=4.17.2.1
      , battleship
